# QTM-Interface

./: .gitignore  CLAUDE.md  Coffee-Shop-V2.ipynb  Inputs 🧮.py  QTMInputs.py  README.md  Simulation.ipynb  Welcome.py  agents.py  authentication.py  config.yaml  env.env  interfaceData.db  other_open_tasks.txt  policies.py  pyproject.toml  requirements.txt  setup.ipynb
.ipynb_checkpoints/: Coffee-Shop-Super Simple-checkpoint.ipynb  Coffee-Shop-V2-checkpoint.ipynb  Inifinite_runner_loop-checkpoint.ipynb  Simulation-checkpoint.ipynb  agents-checkpoint.py
Archive/: agent_utility_behavior.py  investor.py  mockups.py  plotsComprehensive.py
Documentation/: QTM Whitepaper.md
Model/: interface.py  interfaceData.db  interfaceData.db-journal  interface_plotlydash.py  interface_streamlit.py  interface_streamlit2.py  panel_app.py  plots.py  policies.py  post_processing.py  processing.py  run.ipynb  simulation.py  state_update_blocks.py  state_variables.py  sys_params.py  utils.py
UserInterface/: Inputs 🧮.py  StreamlitUI_V1.py  agentBehavior.py  all_headers_and_friendly_names.csv  basicTokenInformation.py  businessAssumptions.py  consistencyChecks.py  fundraising.py  headers_and_friendly_names.csv  helpers.py  inputConsolidation.py  interfaceData.db  marketSimulation.py  persist.py  plots.py  tokenAllocationsAndVesting.py  tokenInMarketInitialization.py  userAdoption.py  utilities.py
brownian_motion_generator/: __init__.py  brownian_motion_generator.py
data/: Quantitative_Token_Model_V1.87 - cadCAD_inputs.csv  Quantitative_Token_Model_V1.88_radCad_integration - Data Tables.csv  Quantitative_Token_Model_V1.88_radCad_integration - radCAD_inputs.csv  Quantitative_Token_Model_V1.89_radCAD_integration - Data Tables.csv  Quantitative_Token_Model_V1.89_radCAD_integration - Data Tables_only_staking_vesting.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_inputs DEFAULT.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_inputs.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_inputs2.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_inputs_2.75_public_sale_perc.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_inputs_only_staking_vesting.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_inputs_supply_interval.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_inputs_test.csv  Quantitative_Token_Model_V1.89_radCAD_integration - radCAD_lower_launch_valuation.csv  Quantitative_Token_Model_V1.90_radCAD_integration - Data Tables.csv  Quantitative_Token_Model_V1.90_radCAD_integration - radCAD_inputs DEFAULT.csv  inifite_runner_machinations100.csv  (+3 more)
(+75 files in other folders)
